force-app/main/default/objects/Lead/fields/Canalizar_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Canalizar_Atenci_n__c</fullName>
    <inlineHelpText>Cuando se le da el apoyo que requiere para llegar a algunos de los canales para ingresar al programa</inlineHelpText>
    <label>Canalizar Atención</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paciente INP</fullName>
            </value>
            <value>
                <fullName>Paciente CPC</fullName>
            </value>
            <value>
                <fullName>Paciente GDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>