force-app/main/default/objects/Lead/fields/ComoPrefiereSerContactado__c.field-meta.xml
<CustomField>
    <fullName>ComoPrefiereSerContactado__c</fullName>
    <label>¿Cómo prefiere ser contactado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>