force-app/main/default/objects/Lead/fields/Compromiso_con_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Compromiso_con_obra_social__c</fullName>
    <label>Compromiso con alguna obra social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>