force-app/main/default/objects/Lead/fields/Correo_electronico_alternativo__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_alternativo__c</fullName>
    <label>Correo electrónico alternativo</label>
    <type>Email</type>
</CustomField>