force-app/main/default/objects/Lead/fields/CorreoElectronicoLaboral__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoLaboral__c</fullName>
    <label>Correo electrónico laboral</label>
    <type>Email</type>
</CustomField>