force-app/main/default/objects/Lead/fields/Delegaci_n_Municipio__c.field-meta.xml
<CustomField>
    <fullName>Delegaci_n_Municipio__c</fullName>
    <label>Delegación / Municipio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>