force-app/main/default/objects/Lead/fields/Diagn_stico__c.field-meta.xml
<CustomField>
    <fullName>Diagn_stico__c</fullName>
    <label>Diagnóstico</label>
    <type>TextArea</type>
</CustomField>