force-app/main/default/objects/Lead/fields/FamiliarConCardiopatiaOtraEnfermedad__c.field-meta.xml
<CustomField>
    <fullName>FamiliarConCardiopatiaOtraEnfermedad__c</fullName>
    <label>Familiar con cardiopatía/otra enfermedad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>