force-app/main/default/objects/Lead/fields/Fecha_cuarto_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cuarto_contacto__c</fullName>
    <label>Fecha cuarto contacto</label>
    <type>DateTime</type>
</CustomField>