force-app/main/default/objects/Lead/fields/Fecha_primer_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_primer_contacto__c</fullName>
    <label>Fecha primer contacto</label>
    <type>DateTime</type>
</CustomField>