force-app/main/default/objects/Lead/fields/Fecha_segundo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_segundo_contacto__c</fullName>
    <label>Fecha segundo contacto</label>
    <type>DateTime</type>
</CustomField>