force-app/main/default/objects/Lead/fields/Fecha_tercer_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_tercer_contacto__c</fullName>
    <label>Fecha tercer contacto</label>
    <type>DateTime</type>
</CustomField>