force-app/main/default/objects/Lead/fields/GW_Volunteers__Volunteer_Notes__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
    <label>Volunteer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>