force-app/main/default/objects/Lead/fields/Hospital_de_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Hospital_de_Procedencia__c</fullName>
    <label>Hospital de Procedencia</label>
    <type>TextArea</type>
</CustomField>