force-app/main/default/objects/Lead/fields/Nombre_de_Cardiol_go__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Cardiol_go__c</fullName>
    <label>Nombre de Cardiológo</label>
    <type>TextArea</type>
</CustomField>