force-app/main/default/objects/Lead/fields/Numero_exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_exterior__c</fullName>
    <label>Número exterior</label>
    <length>30</length>
    <type>Text</type>
</CustomField>