force-app/main/default/objects/Lead/fields/Numero_interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_interior__c</fullName>
    <label>Número interior</label>
    <length>30</length>
    <type>Text</type>
</CustomField>