force-app/main/default/objects/Lead/fields/Observaciones_primer_contacto__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_primer_contacto__c</fullName>
    <label>Observaciones primer contacto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>