force-app/main/default/objects/Lead/fields/Observaciones_tercer_contacto__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_tercer_contacto__c</fullName>
    <label>Observaciones tercer contacto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>