force-app/main/default/objects/Lead/fields/Padre_o_Madre__c.field-meta.xml
<CustomField>
    <fullName>Padre_o_Madre__c</fullName>
    <label>Padre o Madre</label>
    <type>TextArea</type>
</CustomField>