force-app/main/default/objects/Lead/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <defaultValue>&quot;México&quot;</defaultValue>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pais</valueSetName>
    </valueSet>
</CustomField>