force-app/main/default/objects/Lead/fields/Persona_que_lo_refiere__c.field-meta.xml
<CustomField>
    <fullName>Persona_que_lo_refiere__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona que lo refiere</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referidos</relationshipLabel>
    <relationshipName>Candidatos1</relationshipName>
    <type>Lookup</type>
</CustomField>