force-app/main/default/objects/Lead/fields/Que_ayuda_necesita__c.field-meta.xml
<CustomField>
    <fullName>Que_ayuda_necesita__c</fullName>
    <label>Que ayuda necesita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segunda Opinion Asistencial</fullName>
            </value>
            <value>
                <fullName>Segunda Opinion Privado</fullName>
            </value>
            <value>
                <fullName>Primera Valoración Asistencial</fullName>
            </value>
            <value>
                <fullName>Primera Valoración Privado</fullName>
            </value>
            <value>
                <fullName>Otro tipo de Apoyo</fullName>
            </value>
            <value>
                <fullName>Referenciación paciente</fullName>
            </value>
            <value>
                <fullName>Traslado Paciente Asistencial</fullName>
            </value>
            <value>
                <fullName>Información Kardias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>