force-app/main/default/objects/Lead/fields/QueLeInteresaDonar__c.field-meta.xml
<CustomField>
    <fullName>QueLeInteresaDonar__c</fullName>
    <label>¿Qué le interesa donar?</label>
    <type>TextArea</type>
</CustomField>