force-app/main/default/objects/Lead/fields/Quien__c.field-meta.xml
<CustomField>
    <fullName>Quien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>En caso de tener un familiar con cardiopatía o alguna otra enfermedad, realice la búsqueda del paciente o  el registro de un nuevo paciente seleccionando la opción &quot;Crear Contacto&quot;.</inlineHelpText>
    <label>¿Quién? (familiar con enfermedad)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>