force-app/main/default/objects/Lead/fields/Referido_por__c.field-meta.xml
<CustomField>
    <fullName>Referido_por__c</fullName>
    <label>Referido por:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kardias</fullName>
            </value>
            <value>
                <fullName>Médico</fullName>
            </value>
            <value>
                <fullName>Otra persona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>