force-app/main/default/objects/Lead/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <label>Seguro</label>
    <type>TextArea</type>
</CustomField>