force-app/main/default/objects/Lead/fields/TelefonoLaboral__c.field-meta.xml
<CustomField>
    <fullName>TelefonoLaboral__c</fullName>
    <label>Teléfono laboral</label>
    <type>Phone</type>
</CustomField>