force-app/main/default/objects/Lead/fields/Tipo_de_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_obra_social__c</fullName>
    <inlineHelpText>Si tiene compromiso con alguna obras social, seleccione de qué tipo.</inlineHelpText>
    <label>Tipo de obra social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecología</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>