force-app/main/default/objects/Lead/fields/Tipo_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Paciente__c</fullName>
    <inlineHelpText>Segun lo que nos digan si tiene seguro privado, si puede pagar una consulta, etc.</inlineHelpText>
    <label>Tipo de Paciente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privado</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Asistencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>