force-app/main/default/objects/Lead/recordTypes/Donante.recordType-meta.xml
<RecordType>
    <fullName>Donante</fullName>
    <active>true</active>
    <businessProcess>Donantes</businessProcess>
    <label>Donante</label>
</RecordType>