force-app/main/default/objects/Lead/recordTypes/Paciente.recordType-meta.xml
<RecordType>
    <fullName>Paciente</fullName>
    <active>true</active>
    <businessProcess>Donantes</businessProcess>
    <label>Paciente</label>
</RecordType>