force-app/main/default/objects/Lead/validationRules/RFC.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC</fullName>
    <active>false</active>
    <errorConditionFormula>IF(NOT(ISBLANK(RFC__c)) &amp;&amp; NOT(REGEX(RFC__c,&quot;[A-Z,Ñ,&amp;]{3,4}[0-9]{2}[0-1][0-9][0-3][0-9][A-Z,0-9]?[A-Z,0-9]?[0-9,A-Z]?&quot;)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>RFC__c</errorDisplayField>
    <errorMessage>El RFC proporcionado no es correcto. Verifique.</errorMessage>
</ValidationRule>